fix: navigation list scroll on mobile
disables folder drag-n-drop on mobile for now

--- a/packages/web/src/stylesheets/_navigation.scss
+++ b/packages/web/src/stylesheets/_navigation.scss
@@ -1,10 +1,3 @@
-@import './scrollbar';
-
-#navigation .scrollable {
-  @include minimal_scrollbar();
-  height: 100%;
-}
-
 $content-horizontal-padding: 16px;
 
 #navigation {
